# ExerciseROS

./: README.md
ex1/.catkin_tools/profiles/default/: devel_collisions.txt
ex1/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ex1/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
ex1/devel/.private/smb_control/: .catkin  .rosinstall  local_setup.sh
ex1/devel/.private/smb_description/: .catkin  setup.sh
ex1/devel/.private/smb_gazebo/: .catkin  local_setup.sh  setup.sh
ex1/devel/.private/teleop_twist_keyboard/: .catkin  .rosinstall  setup.sh
ex2/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ex2/logs/smb_gazebo/: build.check.007.log.stderr
ex2/logs/smb_highlevel_controller/: build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr
ex2/src/: config.rviz  smb_common
ex2/src/smb_highlevel_controller/: CMakeLists.txt
ex2/src/smb_highlevel_controller/config/: params.yaml
ex2/src/smb_highlevel_controller/launch/: param.launch
ex2/src/smb_highlevel_controller/src/: listener.cpp
(+74 files in other folders)
